# comp-dist-av3-2

./: .gitignore  README.md  loader.py  main.py  pyproject.toml  search.py
graph/: graph.py  schema.json  schema.py
graph/examples/: ex1.json
network/: network.py  network_node.py
src/: config.py  loader.py  main.py  search.py  teste.json
src/cache/: cache.py  example.json
src/comp_dist_av3_2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/graph/: __init__.py  graph.py  node.py  schema.json  schema.py
src/graph/examples/: ex2.json  ex3.json
src/network/: __init__.py  network.py  network_node.py  packet.py  peer.py
src/scripts/: create_case.py  run.py
src/visualization/: network.py  step.py
tests/: test_cache_performance.py  test_network.json  test_search.py
validation/: analysis.ipynb  benchmark.py  cache_bfs.json  cache_dfs.json  cache_random.json  generate_hexagonal_network.py  hexagonal_network.json  results.csv
