[project]
name = "comp-dist-av3-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
]

[project.scripts]
example = "scripts.run:example"
case = "scripts.run:case"
create = "scripts.create_case:template"

[tool.uv]
package = true
