[project]
name = "comp-dist-av3-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "polars>=1.35.2",
    "pytest>=9.0.2",
]

[project.scripts]
example = "scripts.run:example"
case = "scripts.run:case"
create = "scripts.create_case:template"

[tool.uv]
package = true
